Added and cleaned up references

--- a/thesis/01-introduction/00-Introduction.tex
+++ b/thesis/01-introduction/00-Introduction.tex
@@ -15,9 +15,10 @@ bring the system from a known state to a final state that encodes the solution o
 approach is the Variational Quantum Algorithm (VQA), which is a hybrid algorithm that uses quantum
 hardware for state evolution, and classical routines for optimization purposes.
 
-In this work, we propose and analyze a version of the Digitized Adiabatic Quantum Factorization (DAQF)
-algorithm that incorporates a variation in the cost Hamiltonian. By this, we aim to provide a more
-resource-efficient and scalable method for integer factorization.
+In this work, we propose and analyze a version of the Digitized Adiabatic Quantum
+Factorization~\cite{hegade_digitized_2021} algorithm that incorporates a variation in the
+cost Hamiltonian. By this, we aim to provide a more resource-efficient and scalable method
+for integer factorization.
 
 \let\clearpage
 
