--- a/thesis/02-factorization/00-Introduction.tex
+++ b/thesis/02-factorization/00-Introduction.tex
@@ -1,8 +1,7 @@
 \chapter{Factorization Algorithms}
 \label{Chapter:Factorization}
 
-\dropcap{I}n this chapter, we introduce the factorization algorithms that are most relevant
-to the work presented in this thesis. The integer factorization problem consists of
+\dropcap{T}he integer factorization problem consists of
 decomposing a given semiprime number $N$ into its prime constituents. While seemingly simple,
 no known classical algorithm can factor large integers efficiently, and the best classical
 methods --such as the general number field sieve-- scale superpolynomially with input
