--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -237,3 +237,36 @@
 	pages = {1--66},
 	file = {Preprint PDF:/home/fpellicer/Zotero/storage/MBGMVLJL/Blekos et al. - 2024 - A Review on Quantum Approximate Optimization Algorithm and its Variants.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/LQAC6E8R/2306.html:text/html},
 }
+
+@inproceedings{aharonov_adiabatic_2004,
+	address = {Rome, Italy},
+	title = {Adiabatic {Quantum} {Computation} is {Equivalent} to {Standard} {Quantum} {Computation}},
+	isbn = {978-0-7695-2228-9},
+	url = {http://ieeexplore.ieee.org/document/1366223/},
+	doi = {10.1109/FOCS.2004.8},
+	urldate = {2025-08-30},
+	booktitle = {45th {Annual} {IEEE} {Symposium} on {Foundations} of {Computer} {Science}},
+	publisher = {IEEE},
+	author = {Aharonov, D. and Van Dam, W. and Kempe, J. and Landau, Z. and Lloyd, S. and Regev, O.},
+	year = {2004},
+	pages = {42--51},
+}
+
+@article{kadowaki_quantum_1998,
+	title = {Quantum {Annealing} in the {Transverse} {Ising} {Model}},
+	volume = {58},
+	issn = {1063-651X, 1095-3787},
+	url = {http://arxiv.org/abs/cond-mat/9804280},
+	doi = {10.1103/PhysRevE.58.5355},
+	abstract = {We introduce quantum fluctuations into the simulated annealing process of optimization problems, aiming at faster convergence to the optimal state. Quantum fluctuations cause transitions between states and thus play the same role as thermal fluctuations in the conventional approach. The idea is tested by the transverse Ising model, in which the transverse field is a function of time similar to the temperature in the conventional method. The goal is to find the ground state of the diagonal part of the Hamiltonian with high accuracy as quickly as possible. We have solved the time-dependent Schr{\textbackslash}"odinger equation numerically for small size systems with various exchange interactions. Comparison with the results of the corresponding classical (thermal) method reveals that the quantum annealing leads to the ground state with much larger probability in almost all cases if we use the same annealing schedule.},
+	number = {5},
+	urldate = {2025-08-30},
+	journal = {Physical Review E},
+	author = {Kadowaki, Tadashi and Nishimori, Hidetoshi},
+	month = nov,
+	year = {1998},
+	note = {arXiv:cond-mat/9804280},
+	keywords = {Condensed Matter - Disordered Systems and Neural Networks, Condensed Matter - Statistical Mechanics},
+	pages = {5355--5363},
+	file = {Preprint PDF:/home/fpellicer/Zotero/storage/26CRWRYF/Kadowaki and Nishimori - 1998 - Quantum Annealing in the Transverse Ising Model.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/BR3IUM2K/9804280.html:text/html},
+}
