--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -152,9 +152,14 @@
 
 
 %% Use letters for the chapter numbers of the appendices.
-%\appendix
+\appendix
+\include{06-appendix/00-TitleNLabel}
+\include{06-appendix/01-InformationTable}
+\include{06-appendix/02-FidelityEvolution}
+\include{06-appendix/03-CostEvolution}
+\include{06-appendix/04-Populations}
 
-%\include{appendix-a/appendix-a}
+\addcontentsline{toc}{chapter}{Appendix}
 
 %% Turn off thumb indices for unnumbered chapters.
 \thumbfalse
