--- a/thesis/04-results/01-Introduction.tex
+++ b/thesis/04-results/01-Introduction.tex
@@ -34,7 +34,7 @@ the protocols across problem instances of increasing size under these controlled
 
 As representative examples, we present detailed results for the biprime integers $N = 25$, $N = 77$,
 and $N = 143$. A complete set of results can be found in the accompanying GitHub repository
-and is summarized in Appendix~\ref{todo}. Table~\ref{tab:instances_overview} provides an overview of
+and is summarized in the appendix~\ref{Chapter:Appendix}. Table~\ref{tab:instances_overview} provides an overview of
 these selected test cases, including relevant problem parameters and solution encodings.
 \begin{table}[h]
     \centering
