--- a/thesis/04-results/02-Results.tex
+++ b/thesis/04-results/02-Results.tex
@@ -5,7 +5,7 @@ Firstly, we evaluate the fidelities achieved by the different protocols as a fun
     \item For $N = 143$, the \texttt{standard} protocol initially leads, until a sudden fidelity jump in one of the \texttt{linear} protocols overtakes it.  
 \end{itemize}
 
-As the problem size increases, the third behavior---a sudden jump in fidelity---appears more frequently. Although the cost-function landscape evolves smoothly, the fidelity of \texttt{linear} protocols often exhibits these abrupt improvements. The underlying reasons for this phenomenon will be analyzed in Chapter~\ref{Chapter:Discussion}.
+As the problem size increases, the third behavior---a sudden jump in fidelity---appears more frequently. Although the cost-function landscape evolves more smoothly (see Fig.~\ref{fig:cost_layers_all}), the fidelity of \texttt{linear} protocols often exhibits these abrupt improvements. The underlying reasons for this phenomenon will be analyzed in Chapter~\ref{Chapter:Discussion}.
 
 \begin{figure}[h]
     \centering
