--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -55,19 +55,19 @@
 %%%%
 % All TITLE pages
 %%%%
-\include{00-frontmatter/title}
+\include{00-frontmatter/cover}
 
 % Dissertation Committee
 %%%%
 
-\thispagestyle{empty}
-\include{00-frontmatter/committee}
+% \thispagestyle{empty}
+% \include{00-frontmatter/committee}
 
 % Fundings, SIKS, etc.
 %%%%
 
-\thispagestyle{empty}
-\include{00-frontmatter/acks}
+% \thispagestyle{empty}
+% \include{00-frontmatter/acks}
 
 % Declaration of Authorship
 %%%%
@@ -78,8 +78,8 @@
 % Quote
 %%%%
 
-\thispagestyle{empty}
-\dedication{\epigraph{Dedicatory of this thesis...}{Author}}
+% \thispagestyle{empty}
+% \dedication{\epigraph{Dedicatory of this thesis...}{Author}}
 
 
 
