--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -182,10 +182,10 @@
 %%%%
 % Glossary
 %%%%
-\glsaddall
-\printglossary[type=\acronymtype,title={Glossary}]
-\addcontentsline{toc}{chapter}{Glossary}
-\setheader{Glossary}
+% \glsaddall
+% \printglossary[type=\acronymtype,title={Glossary}]
+% \addcontentsline{toc}{chapter}{Glossary}
+% \setheader{Glossary}
 
 
 
